# llvm-project

clang/include/clang/Driver/: CommonArgs.h
clang/lib/CodeGen/: CGCUDANV.cpp
clang/lib/Driver/: Driver.cpp
clang/lib/Driver/ToolChains/: AMDGPU.cpp  Clang.cpp  CommonArgs.cpp  CommonArgs.h  Cuda.cpp  Gnu.cpp  HIPAMD.cpp
clang/lib/Headers/: CMakeLists.txt
clang/lib/Headers/llvm_offload_wrappers/: __llvm_offload.h  __llvm_offload_builtin_vars.h  __llvm_offload_host.h
clang/lib/Sema/: SemaCUDA.cpp
clang/tools/clang-linker-wrapper/: ClangLinkerWrapper.cpp
libc/docs/: configure.rst
libc/src/__support/FPUtil/: FPBits.h
llvm/include/llvm/Frontend/Offloading/: Utility.h
llvm/include/llvm/Object/: OffloadBinary.h
llvm/lib/BinaryFormat/: Magic.cpp
llvm/lib/Frontend/Offloading/: OffloadWrapper.cpp  Utility.cpp
llvm/lib/Object/: OffloadBinary.cpp
offload/: CMakeLists.txt
offload/include/: omptarget.h
offload/include/Shared/: APITypes.h
offload/languages/: CMakeLists.txt  README.md
offload/languages/cuda/: CMakeLists.txt  exports
offload/languages/cuda/include/: cuda_runtime.h
offload/languages/cuda/src/: cuda_runtime.cpp
offload/languages/hip/: CMakeLists.txt  exports
offload/languages/hip/include/: hip_runtime.h
offload/languages/hip/include/hip/: hip_runtime.h
offload/languages/hip/src/: hip_runtime.cpp
offload/languages/include/cuda/: cuda_runtime.h
offload/languages/include/hip/: hip_runtime.h
offload/languages/include/kernel/: DefineLanguageNames.inc  LanguageRuntime.h  UndefineLanguageNames.inc
offload/languages/kernel/: CMakeLists.txt  exports
offload/languages/kernel/include/: ExportedAPI.h  LanguageAliases.h  LanguageLaunch.cpp  LanguageLaunch.h  LanguageRegistration.cpp  LanguageRegistration.h  LanguageRuntime.cpp  LanguageRuntime.h  Registration.h  State.h  Types.h
offload/languages/kernel/src/: ExportedAPI.cpp  LanguageLaunch.cpp  LanguageRegistration.cpp  LanguageRuntime.cpp  State.cpp
offload/liboffload/API/: Device.td
offload/liboffload/src/: OffloadImpl.cpp
offload/libomptarget/: CMakeLists.txt  exports  interface.cpp
offload/libomptarget/OpenMP/: API.cpp
offload/plugins-nextgen/amdgpu/src/: rtl.cpp
offload/plugins-nextgen/common/include/: PluginInterface.h
offload/plugins-nextgen/common/src/: GlobalHandler.cpp  PluginInterface.cpp
offload/plugins-nextgen/common/src/Utils/: ELF.cpp
offload/plugins-nextgen/cuda/src/: rtl.cpp
offload/test/offloading/CUDA/: basic_launch.cu  basic_launch_blocks_and_threads.cu  basic_launch_multi_arg.cu  launch_tu.cu  thread_and_block_id.cu
